--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <table width="100%" height="100%">
         <tr bgcolor="#7faaf0" height="25%">
             <td>
-                <table align="right" width="15%" height="20%" border="1" bgcolor="#ffffff">
+                <table align="right" width="15%" height="20%" bgcolor="#ffffff">
                     <tr>
                         <td align="right">
                             <h1>Hello &nbsp;</h1>
@@ -31,10 +31,10 @@
         </tr>
         <tr>
             <td>
-                <table width="100%" height="100%" border="1">
+                <table width="100%" height="100%">
                     <tr>
                         <td width="50%">
-                            <table width="100%" height="100%" border="1">
+                            <table width="100%" height="100%">
                                 <tr>
                                     <td align="right " width="40%" height="80%" bgcolor="#a7eda4 ">
                                         <p>
@@ -60,7 +60,7 @@
                             </table>
                         </td>
                         <td>
-                            <table width="100% " height="100% " border="1">
+                            <table width="100% " height="100% ">
                                 <tr>
                                     <td width=" 10% " bgcolor=" white "></td>
 
