--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <title>Lab1 - Main</title>
     <meta charset="utf-8">
+
     <style>
+        /*
         * {
             padding: 0;
             margin: 0;
         }
+        */
     </style>
 </head>
 
@@ -16,10 +19,13 @@
     <table width="100%" height="100%">
         <tr bgcolor="#7faaf0" height="25%">
             <td>
-                <table align="right" width="15%" height="20%" bgcolor="#ffffff">
+                <table align="right" width="15%" height="20%" bgcolor="#7faaf0">
                     <tr>
-                        <td align="right">
+                        <td align="right" bgcolor="ffffff">
                             <h1>Hello &nbsp;</h1>
+                        </td>
+                        <td>
+                            &nbsp;
                         </td>
                     </tr>
                 </table>
@@ -31,27 +37,27 @@
         </tr>
         <tr>
             <td>
-                <table width="100%" height="100%">
+                <table width="100% " height="100% ">
                     <tr>
-                        <td width="50%">
-                            <table width="100%" height="100%">
+                        <td width="50% ">
+                            <table width="100% " height="100% ">
                                 <tr>
-                                    <td align="right " width="40%" height="80%" bgcolor="#a7eda4 ">
+                                    <td align="right " width="40% " height="80% " bgcolor="#a7eda4 ">
                                         <p>
                                             Lorem ipsum, dolor sit amet consectetur adipisicing er cumque inventore molestias animi accusamus suscipit, aspernatur repudiandae et sint sed voluptatibus nemo dolore obcaecati? Iusto.;
                                         </p>
 
                                     </td>
-                                    <td width="20%" height="80%" bgcolor="white">
+                                    <td width="20% " height="80% " bgcolor="white ">
                                     </td>
-                                    <td align="right " width="40%" height="80%" bgcolor="#e4f7e4 ">
+                                    <td align="right " width="40% " height="80% " bgcolor="#e4f7e4 ">
                                         <p>
                                             Lorem ipsum, dolor sit amet cr repudiandae et sint sed voluptatibus nemo dolore obcaecati? Iusto.;
                                         </p>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td colspan="3" align="left " bgcolor="#ede5d1 ">
+                                    <td colspan="3 " align="left " bgcolor="#ede5d1 ">
                                         <p>
                                             Lorem ipsum, dolor sit amet consectetur adipisicing er cumque inventore molestias animi accusamus suscipit, aspernatur repudiandae et sint sed voluptatibus nemo dolore obcaecati? Iusto.;
                                         </p>
@@ -71,14 +77,14 @@
                                     </td>
                                     <td width=" 10% " bgcolor=" white "></td>
 
-                                    <td width="40%" bgcolor=" #ede5d1 " align=" right ">
+                                    <td width="40% " bgcolor=" #ede5d1 " align=" right ">
                                         <h2>Menu &nbsp;</h2>
-                                        <ul type="none">
-                                            <li><a href="pages/page1.html">Page 1 &nbsp;</a></li>
-                                            <li><a href="pages/page2.html">Page 2 &nbsp;</a></li>
-                                            <li><a href="pages/page3.html">Page 3 &nbsp;</a></li>
-                                            <li><a href="pages/page4.html">Page 4 &nbsp;</a></li>
-                                            <li><a href="pages/page5.html">Page 5 &nbsp;</a></li>
+                                        <ul type="none ">
+                                            <li><a href="pages/page1.html ">Page 1 &nbsp;</a></li>
+                                            <li><a href="pages/page2.html ">Page 2 &nbsp;</a></li>
+                                            <li><a href="pages/page3.html ">Page 3 &nbsp;</a></li>
+                                            <li><a href="pages/page4.html ">Page 4 &nbsp;</a></li>
+                                            <li><a href="pages/page5.html ">Page 5 &nbsp;</a></li>
 
                                         </ul>
                                     </td>
