--- a/lab2/index.html
+++ b/lab2/index.html
@@ -6,8 +6,7 @@
     </head>
 
     <body>
-        <a href="lab1/index.html"> lab1</a>
-        <a href="lab2/index.html"> lab2</a>
+        <a href="../index.html"> back to main</a>
 
     </body>
 
