--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,11 +3,48 @@
 
     <head>
         <meta charset="utf-8">
+        <title>lab2</title>
+        <link rel="stylesheet" href="style/style.css">
     </head>
 
     <body>
-        <a href="../index.html"> back to main</a>
+        <!-- <a href="../index.html"> back to main</a> -->
+        <header class="header-footer clearfix">
+            <h1 class="title">1</h1>
+            <div class="white-box">
+                <h1 class="text">x</h1>
+            </div>
+        </header>
+        <div class="clearfix">
+            <div class="column">
+                <div class="col-2">
+                    <h1 class="text">2</h1>
+                </div>
+                <div class="col-3">
+                    <h1 class="text">3</h1>
+                </div>
+                <div class="col-6">
+                    <h1 class="text">6</h1>
+                </div>
+            </div>
+            <div class="column">
+                <div class="col-4">
+                    <h1 class="text">4</h1>
+                </div>
+                <div class="col-5">
+                    <h1 class="text">5</h1>
+                </div>
+            </div>
+        </div>
 
+
+        <footer class="header-footer clearfix">
+            <div class="white-box">
+                <h1 class="text">y</h1>
+            </div>
+            <h1 class="title">7</h1>
+
+        </footer>
     </body>
 
     </html>
