fixed box sizing

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -10,29 +10,43 @@
     <body>
         <!-- <a href="../index.html"> back to main</a> -->
         <header class="header-footer clearfix">
-            <h1 class="title">1</h1>
+            <h1 class="title">lorem ipsum</h1>
             <div class="white-box">
-                <h1 class="text">x</h1>
+                <h1 class="text">Hello</h1>
             </div>
         </header>
         <div class="clearfix">
             <div class="column">
                 <div class="col-2">
-                    <h1 class="text">2</h1>
+                    <p class="text"> Lorem ipsum, dolor sit amet consectetur adipisicing er cumque inventore molestias animi accusamus suscipit, aspernatur repudiandae et sint sed voluptatibus nemo dolore obcaecati? Iusto.;
+                    </p>
                 </div>
                 <div class="col-3">
-                    <h1 class="text">3</h1>
+                    <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing er cumque inventore molestias animi accusamus suscipit, aspernatur repudiandae et sint sed voluptatibus nemo dolore obcaecati? Iusto.;
+                    </p>
                 </div>
                 <div class="col-6">
-                    <h1 class="text">6</h1>
+                    <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing er cumque inventore molestias animi accusamus suscipit, aspernatur repudiandae et sint sed voluptatibus nemo dolore obcaecati? Iusto.;
+                    </p>
                 </div>
             </div>
             <div class="column">
                 <div class="col-4">
-                    <h1 class="text">4</h1>
+                    <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing er cumque inventore molestias animi accusamus suscipit, aspernatur repudiandae et sint sed voluptatibus nemo dolore obcaecati? Iusto.;
+                    </p>
                 </div>
                 <div class="col-5">
-                    <h1 class="text">5</h1>
+                    <section>
+                        <h2>Menu</h2>
+                        <ul type="none">
+                            <li><a href="../lab1/pages/page1.html">Page 1 &nbsp;</a></li>
+                            <li><a href="../lab1/pages/page2.html ">Page 2 &nbsp;</a></li>
+                            <li><a href="../lab1/pages/page3.html ">Page 3 &nbsp;</a></li>
+                            <li><a href="../lab1/pages/page4.html ">Page 4 &nbsp;</a></li>
+                            <li><a href="../lab1/pages/page5.html ">Page 5 &nbsp;</a></li>
+
+                        </ul>
+                    </section>
                 </div>
             </div>
         </div>
@@ -40,9 +54,9 @@
 
         <footer class="header-footer clearfix">
             <div class="white-box">
-                <h1 class="text">y</h1>
+                <h1 class="text">world!</h1>
             </div>
-            <h1 class="title">7</h1>
+            <h1 class="title">ipsum lorem</h1>
 
         </footer>
     </body>
