finished lab2 flexbox

--- a/lab2/flexbox-css/index.html
+++ b/lab2/flexbox-css/index.html
@@ -16,21 +16,30 @@
         </header>
         <section>
             <article>
-                <div>
-
+                <div id="col-2">
+                    <h1>2</h1>
                 </div>
-                <div>
-
+                <div id="col-3">
+                    <h1>3</h1>
                 </div>
-                <div>
-
+                <div id="col-6">
+                    <h1>6</h1>
                 </div>
             </article>
             <article>
-
+                <div id="col-4">
+                    <h1>4</h1>
+                </div>
+                <div id="col-5">
+                    <h1>5</h1>
+                </div>
             </article>
         </section>
         <footer>
+            <div>
+                <h1>y</h1>
+            </div>
+            <h1>7</h1>
 
         </footer>
     </body>
