--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <body>
         <a href="lab1/index.html"> lab1</a>
-        <a href="lab2/index.html"> lab2</a>
+        <a href="lab2/float-css/index.html"> lab2 float</a>
+        <a href="lab2/flexbox-css/index.html"> lab2 flexbox</a>
+        <a href="lab2/grid-css/index.html"> lab2 grid</a>
 
     </body>
 
