lab3 added, not perfect but it`s done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <a href="lab2/float-css/index.html"> lab2 float</a>
         <a href="lab2/flexbox-css/index.html"> lab2 flexbox</a>
         <a href="lab2/grid-css/index.html"> lab2 grid</a>
+        <a href="lab3/index.html"> lab3</a>
 
     </body>
 
