--- a/lab3/index.html
+++ b/lab3/index.html
@@ -18,20 +18,23 @@
             <article>
                 <div id="col-2">
                     <h1>2</h1>
-
+                    <form id="form-col-2">
+                        <input type="text" id="col-2-input" placeholder="Enter text or html">
+                        <input type="submit" id="col-2-add" value="Add">
+                    </form>
                 </div>
                 <div id="col-3">
                     <div>
                         <h1>3</h1>
                     </div>
                     <form>
-                        <!-- <label for="input">Enter 10 values</label> -->
-                        <input type="text" id="input" placeholder="Enter 10 values">
-                        <input type="submit" id="submit" value="Submit">
+                        <input type="text" id="number-input" placeholder="Enter 10 values">
+                        <button type="submit" id="submit">Submit</button>
                     </form>
                 </div>
                 <div id="col-6">
                     <h1>6</h1>
+                    <p>Some text to be bold or normal</p>
                 </div>
             </article>
             <article>
@@ -40,6 +43,12 @@
                 </div>
                 <div id="col-5">
                     <h1>5</h1>
+                    <form>
+                        <input type="radio" name="font-weight" id="bold" value="bold">
+                        <label for="bold">Bold</label><br>
+                        <input type="radio" name="font-weight" id="normal" value="normal">
+                        <label for="normal">Normal</label><br>
+                    </form>
                 </div>
             </article>
         </section>
