--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="lab2/flexbox-css/index.html"> lab2 flexbox</a>
         <a href="lab2/grid-css/index.html"> lab2 grid</a>
         <a href="lab3/index.html"> lab3</a>
+        <a href="lab4/index.html"> lab4</a>
 
     </body>
 
