--- a/lab4/index.html
+++ b/lab4/index.html
@@ -17,13 +17,18 @@
         <section>
             <article>
                 <div id="col-2">
-                    <h1>2</h1>
+                    <input type="text" name="numbers" id="numbers-input" placeholder="Enter values to sort">
+                    <button type="button" id="sort-button">sort</button>
 
                 </div>
                 <div id="col-3">
-                    <div>
-                        <h1>3</h1>
-                    </div>
+                    <form>
+                        <input type="text" name="accountname" id="name-input" placeholder="GitHub Account">
+                        <br>
+                        <input type="text" name="repository" id="repository-name" placeholder="Repository">
+                        <br>
+                        <input type="submit" id="search-button" value="Search">
+                    </form>
 
                 </div>
                 <div id="col-6">
@@ -32,10 +37,10 @@
             </article>
             <article>
                 <div id="col-4">
-                    <h1>4</h1>
+                    <div id="git-output"></div>
                 </div>
                 <div id="col-5">
-                    <h1>5</h1>
+                    <p>Some text to be italic every 5 sec</p>
 
                 </div>
             </article>
